--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,31 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+}
+
+body {
+  margin: 2em 0;
+}
+
+a {
+  font-weight: normal;
+  color: blue;
+}
+
+a.active {
+  font-weight: bold;
+  color: black;
+}
+
+.main {
+  margin: auto;
+  width: 100%;
+  padding: 10px;
+}
+table {
+  margin: auto;
+  padding: 10px;
+}
+table tr td {
+  padding: 5px;;
 }
