--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 a {
   font-weight: normal;
   color: blue;
+  font-size: small;
 }
 
 a.active {
@@ -22,13 +23,25 @@ a.active {
 
 .main {
   margin: auto;
-  width: 100%;
-  padding: 10px;
+  max-width: 100%;
+  padding: 2px;
 }
+.annee {
+  width: 3em;
+}
+.form {
+  padding: 5px 0;
+}
+
 table {
-  margin: auto;
-  padding: 10px;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
 }
+
 table tr td {
-  padding: 5px;;
+  padding: 5px;
+  font-size: 0.9em;
 }
